--- a/docs/home/open-source-vs-paid.mdx
+++ b/docs/home/open-source-vs-paid.mdx
@@ -1,6 +1,6 @@
 ---
 title: '🏘 Open-source vs. paid'
-description: 'This repo is entirely MIT licensed, with the exception of any under a ee directory which contains premium enterprise features requiring a Mirrorful license.'
+description: 'This repo is entirely MIT licensed.'
 ---
 
 We're currently focused on developing non-enterprise offerings first that should suit most use-cases.
