--- a/docs/home/usage.mdx
+++ b/docs/home/usage.mdx
@@ -1,12 +1,15 @@
 ---
-title: "✨ Usage"
+title: '✨ Usage'
 ---
 
 The following commands will start a local editor at `localhost:5050`.
+
 ```
 yarn run mirrorful
 ```
+
 or
+
 ```
 npx mirrorful
 ```
