install mirrorful and change to -D

--- a/docs/home/get-started.mdx
+++ b/docs/home/get-started.mdx
@@ -4,13 +4,13 @@ description: 'Mirrorful is a NPM package intended to be installed as dev depende
 ---
 
 ```bash
-npm install mirrorful --save-dev
+npm install mirrorful -D
 ```
 
 or
 
 ```bash
-yarn add mirrorful --dev
+yarn add mirrorful -D
 ```
 
 ![](/image/rocketD.png)
