--- a/docs/home/contributing.mdx
+++ b/docs/home/contributing.mdx
@@ -10,3 +10,7 @@ Not sure where to get started? You can:
 - Join our [Slack](https://join.slack.com/t/mirrorful/shared_invite/zt-1ps2xtxh0-2NaixFfFzSKZbr5gw_AHfA) and ask us any questions there.
 
 No matter the PR, all the Github avatars of contributors will be added to the Mirrorful README with their permission.
+
+## Running Mirrorful Locally
+
+Mirrorful runs as a set of packages in a monorepo in order to share common logic across multiple channels.
