--- a/docs/home/community-support.mdx
+++ b/docs/home/community-support.mdx
@@ -6,7 +6,8 @@ title: '❤️ Community & Support'
   <Card title="Slack" icon="slack" color="#9F7AEA">
     for live
     [discussion](https://join.slack.com/t/mirrorful/shared_invite/zt-1ps2xtxh0-2NaixFfFzSKZbr5gw_AHfA)
-    with the community and the Mirrorful team.
+    with the community and the Mirrorful team. We have contributors from all
+    over the world. Join us!
   </Card>
   <Card title="GitHub Discussions" icon="github" color="#9F7AEA">
     for help with building and deeper
@@ -18,7 +19,7 @@ title: '❤️ Community & Support'
     encounter using Mirrorful.
   </Card>
   <Card title="Twitter" icon="twitter" color="#9F7AEA">
-    stay [up to date](https://twitter.com/mirrorful) with the latest product
-    updates. Share your memes!
+    for staying [up to date](https://twitter.com/mirrorful) with the latest
+    product updates.
   </Card>
 </CardGroup>
