--- a/docs/home/open-source-vs-paid.mdx
+++ b/docs/home/open-source-vs-paid.mdx
@@ -1,8 +1,8 @@
 ---
 title: '🏘 Open-source vs. paid'
-description: 'This repo is entirely MIT licensed.'
+description: 'This repo is currently entirely MIT licensed.'
 ---
 
-We're currently focused on developing non-enterprise offerings first that should suit most use-cases.
+We're focused on developing non-enterprise offerings first that should suit most use-cases.
 
-We are working hard to make Mirrorful more extensive. Need any integrations or want a new feature? Feel free to [create an issue](https://github.com/Mirrorful/mirrorful/issues) or contribute directly to the repository. (_The first draft of this README was made by a contributor!_)
+We are working hard to make Mirrorful more extensive. Need any integrations or want a new feature? Feel free to [create an issue](https://github.com/Mirrorful/mirrorful/issues) or contribute directly to the repository.
