--- a/docs/home/intropage.mdx
+++ b/docs/home/intropage.mdx
@@ -5,7 +5,7 @@ description: 'Create the building blocks of your app with our simple and open-so
 
 ![](/image/intropage.png)
 
-Mirrorful is an open-source platform to manage design templates directly in code, making it easy to create the building blocks of your app. Mirrorful will run a visual editor of your theme and then directly export your design tokens to.js, .ts, .css, .scss, .json.
+Mirrorful is an open-source platform to manage design templates directly in code, making it easy to create the building blocks of your app. Mirrorful will run a visual editor of your theme and then directly export your design tokens to any configuration file.
 
 <CardGroup cols={2}>
   <Card
