--- a/docs/home/export-formats.mdx
+++ b/docs/home/export-formats.mdx
@@ -3,7 +3,7 @@ title: '💿 Export Formats'
 description: 'After configuring your theme in the editor, you can export it to be used by your app.'
 ---
 
-We currently export to the following file types: `.js`, `.ts`, `.css`, `.scss`, `.json`. If you're using tailwind, Ww also export to common js to work nicely with your tailwind config.
+We currently export to the following file types: `.js`, `.ts`, `.css`, `.scss`, `.json`. If you're using tailwind, we also export to common js to work nicely with your tailwind config.
 
 ## Example: Using Mirrorful with CSS Variables
 
