--- a/docs/home/export-formats.mdx
+++ b/docs/home/export-formats.mdx
@@ -64,3 +64,13 @@ import { Tokens } from './mirrorful.js'
 
 <button backgroundColor={{ Tokens.primary.base }}>Click here</button>
 ```
+
+## Examples
+
+We have example projects for reference.
+
+- [With Create React App](https://github.com/Mirrorful/mirrorful/tree/main/examples/create-react-app)
+- [With Next.js](https://github.com/Mirrorful/mirrorful/tree/main/examples/with-chakra-ui)
+- [With Tailwind](https://github.com/Mirrorful/mirrorful/tree/main/examples/tailwind-next)
+- [With Chakra UI](https://github.com/Mirrorful/mirrorful/tree/main/examples/with-chakra-ui)
+- [With Nuxt 3](https://github.com/Mirrorful/mirrorful/tree/main/examples/nuxt-3)
