Small copy update

--- a/docs/home/examples.mdx
+++ b/docs/home/examples.mdx
@@ -1,6 +1,6 @@
 ---
 title: '📁 Examples'
-description: 'Example projects for reference on how to integrate Mirrorful'
+description: 'How to integrate Mirrorful with other frameworks and tools.'
 ---
 
 - [With Create React App](https://github.com/Mirrorful/mirrorful/tree/main/examples/create-react-app)
