--- a/docs/home/export-formats.mdx
+++ b/docs/home/export-formats.mdx
@@ -10,7 +10,9 @@ We currently export to the following file types: `.js`, `.ts`, `.css`, `.scss`, 
 If you are using Mirrorful's web editor, you will need to create the imported files yourself. You can do this by simply creating a file of your desired format (i.e. `.js`, `.css`, etc) and then copying
 the generated code into the file.
 
-## Using CSS
+## Colors
+
+### Using CSS
 
 We export to CSS as CSS variables. CSS variables are the easiest way to create and set variables across CSS. They are supported in all modern browsers, and can be used in any CSS file.
 
@@ -39,7 +41,7 @@ Then in any CSS file (or inline Javascript), you can reference CSS variables lik
 <button style={{ backgroundColor: 'var(--color-primary)'}}>
 ```
 
-## Using SCSS
+### Using SCSS
 
 In addition to CSS variables, we also export to SCSS variables.
 
@@ -54,7 +56,7 @@ import './.mirrorful/theme.scss' .primary-button {
 }
 ```
 
-## Using Javascript / Typescript
+### Using Javascript / Typescript
 
 If your project prefers inline styles, or want to use Mirrorful's tokens in Javascript, we also export to Javascript and Typescript.
 
@@ -64,6 +66,70 @@ import { Tokens } from './mirrorful.js'
 
 <button backgroundColor={{ Tokens.primary.base }}>Click here</button>
 ```
+
+### Tailwind
+
+If you projects uses Tailwind you can extend the color theme using the Mirrorful generated tokens.
+_Exact path will depend on your file structure_
+
+```javascript
+const mirrorful = require('./.mirrorful/theme_cjs.js')
+
+theme: {
+  extend: {
+    colors: Tokens.colors
+  }
+}
+```
+
+## Font Sizes
+
+### Using CSS
+
+```css
+.headings {
+  font-size: var(--font-size-lg);
+}
+```
+
+```javascript
+<button style={{ fontSize: 'var(--font-size-sm)'}}>
+```
+
+### Using SCSS
+
+```scss
+/* Exact path will depend on your file structure */
+import './.mirrorful/theme.scss';
+
+.primary-button {
+  font-size: $font-size-sm;
+}
+```
+
+### Using Javascript / Typescript
+
+### Tailwind
+
+## Shadows
+
+### Using CSS
+
+```css
+.headings {
+  box-shadow: var(--box-shadows-sm);
+}
+```
+
+```javascript
+<button style={{ boxShadow: 'var(--box-shadows-sm)'}}>
+```
+
+### Using SCSS
+
+### Using Javascript / Typescript
+
+### Tailwind
 
 ## Examples
 
