added javascript to fonts

--- a/docs/home/export-formats.mdx
+++ b/docs/home/export-formats.mdx
@@ -109,6 +109,13 @@ import './.mirrorful/theme.scss';
 
 ### Using Javascript / Typescript
 
+```javascript
+/* Exact path will depend on your file structure */
+import { Tokens } from './mirrorful.js'
+
+<button fontSize={{ Tokens.fontSizes.sm }}>Click here</button>
+```
+
 ### Tailwind
 
 ## Shadows
