added tailwind to font sizes

--- a/docs/home/export-formats.mdx
+++ b/docs/home/export-formats.mdx
@@ -118,6 +118,16 @@ import { Tokens } from './mirrorful.js'
 
 ### Tailwind
 
+```javascript
+const mirrorful = require('./.mirrorful/theme_cjs.js')
+
+theme: {
+  extend: {
+    fontSize: Tokens.fontSizes
+  }
+}
+```
+
 ## Shadows
 
 ### Using CSS
