added scss box shadow

--- a/docs/home/export-formats.mdx
+++ b/docs/home/export-formats.mdx
@@ -144,6 +144,15 @@ theme: {
 
 ### Using SCSS
 
+```scss
+/* Exact path will depend on your file structure */
+import './.mirrorful/theme.scss';
+
+.primary-button {
+  box-shadow: $box-shadows-sm;
+}
+```
+
 ### Using Javascript / Typescript
 
 ### Tailwind
