added javascript box shadows

--- a/docs/home/export-formats.mdx
+++ b/docs/home/export-formats.mdx
@@ -155,6 +155,13 @@ import './.mirrorful/theme.scss';
 
 ### Using Javascript / Typescript
 
+```javascript
+/* Exact path will depend on your file structure */
+import { Tokens } from './mirrorful.js'
+
+<button boxShadow={{ Tokens.boxShadows.sm }}>Click here</button>
+```
+
 ### Tailwind
 
 ## Examples
