--- a/docs/home/export-formats.mdx
+++ b/docs/home/export-formats.mdx
@@ -164,6 +164,16 @@ import { Tokens } from './mirrorful.js'
 
 ### Tailwind
 
+```javascript
+const mirrorful = require('./.mirrorful/theme_cjs.js')
+
+theme: {
+  extend: {
+    dropShadow: Tokens.boxShadows
+  }
+}
+```
+
 ## Examples
 
 We have example projects for reference.
