added cards to each page

--- a/docs/home/export-formats/introduction.mdx
+++ b/docs/home/export-formats/introduction.mdx
@@ -10,6 +10,20 @@ We currently export to the following file types: `.js`, `.ts`, `.css`, `.scss`, 
 If you are using Mirrorful's web editor, you will need to create the imported files yourself. You can do this by simply creating a file of your desired format (i.e. `.js`, `.css`, etc) and then copying
 the generated code into the file.
 
+## Export Types
+
+<CardGroup cols={3}>
+  <Card title="Colors" icon="palette" href="./colors">
+    Look at how to import colors into your project!
+  </Card>
+  <Card title="Font Size" icon="font" href="./font-sizes">
+    Look at how to import font sizes into your project!
+  </Card>
+  <Card title="Shadows" icon="ghost" href="./shadows">
+    Look at how to import shadows into your project!
+  </Card>
+</CardGroup>
+
 ## Using CSS
 
 We export to CSS as CSS variables. CSS variables are the easiest way to create and set variables across CSS. They are supported in all modern browsers, and can be used in any CSS file.
