--- a/docs/home/export-formats/shadows.mdx
+++ b/docs/home/export-formats/shadows.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🕶️ Shadows'
+title: '👻 Shadows'
 description: 'After configuring your theme in the editor, you can export shadows to be used by your app.'
 ---
 
