--- a/docs/home/export-formats/colors.mdx
+++ b/docs/home/export-formats/colors.mdx
@@ -5,11 +5,6 @@ description: 'After configuring your theme in the editor, you can export colors 
 
 We currently export to the following file types: `.js`, `.ts`, `.css`, `.scss`, `.json`. If you're using tailwind, we also export to common js to work nicely with your tailwind config.
 
-## From Web
-
-If you are using Mirrorful's web editor, you will need to create the imported files yourself. You can do this by simply creating a file of your desired format (i.e. `.js`, `.css`, etc) and then copying
-the generated code into the file.
-
 ## Using CSS
 
 ```css
@@ -26,7 +21,9 @@ the generated code into the file.
 
 ```scss
 /* Exact path will depend on your file structure */
-import './.mirrorful/theme.scss' .primary-button {
+import './.mirrorful/theme.scss' 
+/* You can use the variables anywhere */
+.primary-button {
   background-color: $color-primary;
 }
 ```
