--- a/docs/home/export-formats/introduction.mdx
+++ b/docs/home/export-formats/introduction.mdx
@@ -5,28 +5,28 @@ description: 'After configuring your theme in the editor, you can export it to b
 
 We currently export to the following file types: `.js`, `.ts`, `.css`, `.scss`, `.json`. If you're using tailwind, we also export to common js to work nicely with your tailwind config.
 
-## From Web
+<Info>
+  If you are using Mirrorful's web editor, you will need to create the imported
+  files yourself. You can do this by simply creating a file of your desired
+  format (i.e. `.js`, `.css`, etc) and then copying the generated code into the
+  file.
+</Info>
 
-If you are using Mirrorful's web editor, you will need to create the imported files yourself. You can do this by simply creating a file of your desired format (i.e. `.js`, `.css`, etc) and then copying
-the generated code into the file.
-
-## Export Types
+## Exported Tokens
 
 <CardGroup cols={3}>
   <Card title="Colors" icon="palette" href="./colors">
-    Look at how to import colors into your project!
+    How to import colors into your project.
   </Card>
   <Card title="Font Size" icon="font" href="./font-sizes">
-    Look at how to import font sizes into your project!
+    How to import font sizes into your project.
   </Card>
   <Card title="Shadows" icon="ghost" href="./shadows">
-    Look at how to import shadows into your project!
+    How to import shadows into your project.
   </Card>
 </CardGroup>
 
 ## Using CSS
-
-We export to CSS as CSS variables. CSS variables are the easiest way to create and set variables across CSS. They are supported in all modern browsers, and can be used in any CSS file.
 
 To get your tokens, simply import Mirrorful's `.css` file into your project. _If you are using Mirrorful Web, you will need to create this file yourself._
 
@@ -63,7 +63,9 @@ For example,
 
 ```scss
 /* Exact path will depend on your file structure */
-import './.mirrorful/theme.scss' .primary-button {
+import './.mirrorful/theme.scss' 
+/* You can use the variables anywhere */
+.primary-button {
   background-color: $color-primary;
 }
 ```
@@ -74,7 +76,7 @@ If your project prefers inline styles, or want to use Mirrorful's tokens in Java
 
 ```javascript
 /* Exact path will depend on your file structure */
-import { Tokens } from './mirrorful.js'
+import { Tokens } from './mirrorful'
 
 <button backgroundColor={{ Tokens.primary.base }}>Click here</button>
 ```
@@ -89,7 +91,9 @@ const mirrorful = require('./.mirrorful/theme_cjs.js')
 
 theme: {
   extend: {
-    colors: Tokens.colors
+    colors: Tokens.colors,
+    fontSize: Tokens.fontSizes,
+    dropShadow: Tokens.boxShadows
   }
 }
 ```
