Add Typography and Shadows to exports (#238)
* added new tabs and created a new component

* adjusted the type of the function to accept tokens

* created a typographyTab

* added sm name

* adjusted values for typography tab

* added shadows tab

* adjusted name

* adjusted output for shadows tab

* adjusted boxShadow

* adjusted shadowTab to take names

* for typography tabs added display tabs

* added properties to color tabs

* adjusted property name of tailwind

* commented out primaryName as it is not needed

* added keys

* updated docs by creating multiple sections for colors, font and shadows

* added javascript to fonts

* updated to boxShadows

* added tailwind to font sizes

* added scss box shadow

* added javascript box shadows

* added tailwind

* updated cssName

* renamed to token tab

* added type safe to cssPropertyName

* added typeSafety to javascript property

* added type safety

* added type safety

* added type safety

* added type safety

* created union type

* updated json with export formats group

* separated colors

* separated font-sizes

* separated shadows

* removed initial descriptions

* creaed introduction for descriptions

* updated nesting

* added cards to each page

* added alittle more information

* updated icon

* removed export formats

* added menu button

* renamed array to export type

* added menu option button

* created export type state

* added on change functionality

* commented out previous code

* added specific renders for each tab

* removed commented code

* added select for test

* created object to store export types

* updated export names to be capital

* removed export types and mapping over each export tab

* removed select

* removed input tabs

* editted tabs to make them easier to find

* deleted commented line

* Update

* Clean up docs

---------

Co-authored-by: alexdanilowi

--- a/docs/home/export-formats/introduction.mdx
+++ b/docs/home/export-formats/introduction.mdx
@@ -1,18 +1,32 @@
 ---
-title: '💿 Export Formats'
+title: '💡 Introduction'
 description: 'After configuring your theme in the editor, you can export it to be used by your app.'
 ---
 
 We currently export to the following file types: `.js`, `.ts`, `.css`, `.scss`, `.json`. If you're using tailwind, we also export to common js to work nicely with your tailwind config.
 
-## From Web
+<Info>
+  If you are using Mirrorful's web editor, you will need to create the imported
+  files yourself. You can do this by simply creating a file of your desired
+  format (i.e. `.js`, `.css`, etc) and then copying the generated code into the
+  file.
+</Info>
 
-If you are using Mirrorful's web editor, you will need to create the imported files yourself. You can do this by simply creating a file of your desired format (i.e. `.js`, `.css`, etc) and then copying
-the generated code into the file.
+## Exported Tokens
+
+<CardGroup cols={3}>
+  <Card title="Colors" icon="palette" href="./colors">
+    How to import colors into your project.
+  </Card>
+  <Card title="Font Size" icon="font" href="./font-sizes">
+    How to import font sizes into your project.
+  </Card>
+  <Card title="Shadows" icon="ghost" href="./shadows">
+    How to import shadows into your project.
+  </Card>
+</CardGroup>
 
 ## Using CSS
-
-We export to CSS as CSS variables. CSS variables are the easiest way to create and set variables across CSS. They are supported in all modern browsers, and can be used in any CSS file.
 
 To get your tokens, simply import Mirrorful's `.css` file into your project. _If you are using Mirrorful Web, you will need to create this file yourself._
 
@@ -49,7 +63,9 @@ For example,
 
 ```scss
 /* Exact path will depend on your file structure */
-import './.mirrorful/theme.scss' .primary-button {
+import './.mirrorful/theme.scss' 
+/* You can use the variables anywhere */
+.primary-button {
   background-color: $color-primary;
 }
 ```
@@ -60,17 +76,24 @@ If your project prefers inline styles, or want to use Mirrorful's tokens in Java
 
 ```javascript
 /* Exact path will depend on your file structure */
-import { Tokens } from './mirrorful.js'
+import { Tokens } from './mirrorful'
 
 <button backgroundColor={{ Tokens.primary.base }}>Click here</button>
 ```
 
-## Examples
+## Tailwind
 
-We have example projects for reference.
+If you projects uses Tailwind you can extend the color theme using the Mirrorful generated tokens.
+_Exact path will depend on your file structure_
 
-- [With Create React App](https://github.com/Mirrorful/mirrorful/tree/main/examples/create-react-app)
-- [With Next.js](https://github.com/Mirrorful/mirrorful/tree/main/examples/with-chakra-ui)
-- [With Tailwind](https://github.com/Mirrorful/mirrorful/tree/main/examples/tailwind-next)
-- [With Chakra UI](https://github.com/Mirrorful/mirrorful/tree/main/examples/with-chakra-ui)
-- [With Nuxt 3](https://github.com/Mirrorful/mirrorful/tree/main/examples/nuxt-3)
+```javascript
+const mirrorful = require('./.mirrorful/theme_cjs.js')
+
+theme: {
+  extend: {
+    colors: Tokens.colors,
+    fontSize: Tokens.fontSizes,
+    dropShadow: Tokens.boxShadows
+  }
+}
+```
