--- a/docs/home/export-formats/colors.mdx
+++ b/docs/home/export-formats/colors.mdx
@@ -6,17 +6,19 @@ description: 'After configuring your theme in the editor, you can export colors 
 We currently export to the following file types: `.js`, `.ts`, `.css`, `.scss`, `.json`. If you're using tailwind, we also export to common js to work nicely with your tailwind config.
 
 <CodeGroup>
+<CodeGroup>
 
-```css CSS
-.primary-button {
+````css CSS
+```css CSS .primary-button {
   background-color: var(--color-primary);
 }
-```
+````
 
 ```javascript
 <button style={{ backgroundColor: 'var(--color-primary)'}}>
 ```
 
+````scss SCSS
 ```scss SCSS
 /* Exact path will depend on your file structure */
 import './.mirrorful/theme.scss' 
@@ -24,15 +26,17 @@ import './.mirrorful/theme.scss'
 .primary-button {
   background-color: $color-primary;
 }
-```
+````
 
+````javascript Javascript / Typescript
 ```javascript Javascript / Typescript
 /* Exact path will depend on your file structure */
 import { Tokens } from './mirrorful.js'
 
 <button backgroundColor={{ Tokens.primary.base }}>Click here</button>
-```
+````
 
+````javascript Tailwind
 ```javascript Tailwind
 const mirrorful = require('./.mirrorful/theme_cjs.js')
 
@@ -41,5 +45,6 @@ theme: {
     colors: Tokens.colors
   }
 }
-```
+````
+
 </CodeGroup>
