--- a/docs/home/export-formats/colors.mdx
+++ b/docs/home/export-formats/colors.mdx
@@ -38,8 +38,9 @@ const mirrorful = require('./.mirrorful/theme_cjs.js')
 
 theme: {
   extend: {
-    colors: Tokens.colors
+    colors: mirrorful.Tokens.colors
   }
 }
 ```
+
 </CodeGroup>
