--- a/docs/home/export-formats/font-sizes.mdx
+++ b/docs/home/export-formats/font-sizes.mdx
@@ -38,8 +38,9 @@ const mirrorful = require('./.mirrorful/theme_cjs.js')
 
 theme: {
   extend: {
-    fontSize: Tokens.fontSizes
+    fontSize: mirrorful.Tokens.fontSizes
   }
 }
 ```
+
 </CodeGroup>
