added styled-components example to ExportSuccessModal and example.mdx

--- a/docs/home/examples.mdx
+++ b/docs/home/examples.mdx
@@ -8,5 +8,6 @@ description: 'How to integrate Mirrorful with other frameworks and tools.'
 - [With Tailwind](https://github.com/Mirrorful/mirrorful/tree/main/examples/tailwind-next)
 - [With Chakra UI](https://github.com/Mirrorful/mirrorful/tree/main/examples/with-chakra-ui)
 - [With Nuxt 3](https://github.com/Mirrorful/mirrorful/tree/main/examples/nuxt-3)
+- [With styled-components](https://github.com/Mirrorful/mirrorful/tree/main/examples/with-styled-components)
 
 Don't see what you're looking for? [File an issue](https://github.com/Mirrorful/mirrorful/issues) and we'll be right on it!
