Outline of script

--- a/docs/home/get-started.mdx
+++ b/docs/home/get-started.mdx
@@ -6,7 +6,7 @@ description: 'Mirrorful is a NPM package intended to be installed as dev depende
 <CodeGroup>
 
 ```bash npm
-npm install mirrorful -D; npx mirrorful
+npm install mirrorful -D; npx mirrorful editor
 ```
 
 ```bash yarn
