Add sveltekit example links in all readme files

--- a/docs/home/component-library.mdx
+++ b/docs/home/component-library.mdx
@@ -14,5 +14,6 @@ Check out our examples:
 - [Mirrorful 🤝 Chakra UI](https://github.com/Mirrorful/mirrorful/tree/main/examples/with-chakra-ui)
 - [Mirrorful 🤝 Basic Create React App](https://github.com/Mirrorful/mirrorful/tree/main/examples/create-react-app)
 - [Mirrorful 🤝 Nuxt 3 and Tailwind](https://github.com/Mirrorful/mirrorful/tree/main/examples/nuxt-3)
+- [Mirrorful 🤝 SvelteKit](https://github.com/Mirrorful/mirrorful/tree/main/examples/sveltekit)
 
 Looking for a specific example? [Request one here!](https://github.com/Mirrorful/mirrorful/issues)
