--- a/docs/home/examples.mdx
+++ b/docs/home/examples.mdx
@@ -8,6 +8,7 @@ description: 'How to integrate Mirrorful with other frameworks and tools.'
 - [With Tailwind](https://github.com/Mirrorful/mirrorful/tree/main/examples/tailwind-next)
 - [With Chakra UI](https://github.com/Mirrorful/mirrorful/tree/main/examples/with-chakra-ui)
 - [With Nuxt 3](https://github.com/Mirrorful/mirrorful/tree/main/examples/nuxt-3)
+- [With SvelteKit](https://github.com/Mirrorful/mirrorful/tree/main/examples/sveltekit)
 - [With Bootstrap](https://github.com/Mirrorful/mirrorful/tree/main/examples/bootstrap-next)
 - [With styled-components](https://github.com/Mirrorful/mirrorful/tree/main/examples/with-styled-components)
 
