--- a/docs/home/export-formats/introduction.mdx
+++ b/docs/home/export-formats/introduction.mdx
@@ -87,7 +87,7 @@ If you projects uses Tailwind you can extend the color theme using the Mirrorful
 _Exact path will depend on your file structure_
 
 ```javascript
-const mirrorful = require('./.mirrorful/theme_cjs.js')
+const mirrorful = require('./.mirrorful/theme_cjs.cjs')
 
 theme: {
   extend: {
