--- a/docs/home/export-formats/shadows.mdx
+++ b/docs/home/export-formats/shadows.mdx
@@ -34,7 +34,7 @@ import { Tokens } from './mirrorful.js'
 ```
 
 ```javascript Tailwind
-const mirrorful = require('./.mirrorful/theme_cjs.js')
+const mirrorful = require('./.mirrorful/theme_cjs.cjs')
 
 theme: {
   extend: {
