--- a/docs/home/showcase.mdx
+++ b/docs/home/showcase.mdx
@@ -23,4 +23,4 @@ Discover how we help companies and projects win with design.
   </Card>
 </CardGroup>
 
-Using Mirrorful and want to show it off? Let us know in Slack or open a PR directly in Github!
+Using Mirrorful and want to show it off? Let us know in [Slack](https://join.slack.com/t/mirrorful/shared_invite/zt-1ps2xtxh0-2NaixFfFzSKZbr5gw_AHfA) or open a PR directly in [Github](https://github.com/Mirrorful/mirrorful)!
