docs: updated Remix on README & docs

--- a/docs/home/examples.mdx
+++ b/docs/home/examples.mdx
@@ -3,6 +3,7 @@ title: '📁 Examples'
 description: 'How to integrate Mirrorful with other frameworks and tools.'
 ---
 
+- [With Remix](https://github.com/Mirrorful/mirrorful/tree/main/examples/remix)
 - [With Create React App](https://github.com/Mirrorful/mirrorful/tree/main/examples/create-react-app)
 - [With Next.js](https://github.com/Mirrorful/mirrorful/tree/main/examples/linear-example)
 - [With Tailwind](https://github.com/Mirrorful/mirrorful/tree/main/examples/tailwind-next)
