--- a/docs/home/export-formats/introduction.mdx
+++ b/docs/home/export-formats/introduction.mdx
@@ -78,7 +78,7 @@ If your project prefers inline styles, or want to use Mirrorful's tokens in Java
 /* Exact path will depend on your file structure */
 import { Tokens } from './mirrorful'
 
-<button backgroundColor={{ Tokens.primary.base }}>Click here</button>
+<button backgroundColor={{ Tokens.colors.primary }}>Click here</button>
 ```
 
 ## Tailwind
