--- a/docs/home/export-formats/colors.mdx
+++ b/docs/home/export-formats/colors.mdx
@@ -30,7 +30,7 @@ import './.mirrorful/theme.scss'
 /* Exact path will depend on your file structure */
 import { Tokens } from './mirrorful.js'
 
-<button backgroundColor={{ Tokens.primary.base }}>Click here</button>
+<button backgroundColor={{ Tokens.colors.primary  }}>Click here</button>
 ```
 
 ```javascript Tailwind
