feat: added pnpm in docs
Signed-off-by: Mohammad Asjad <asjad.august@gmail.com>

--- a/docs/home/get-started.mdx
+++ b/docs/home/get-started.mdx
@@ -13,6 +13,10 @@ npm install mirrorful -D; npx mirrorful editor
 yarn add mirrorful -D; yarn run mirrorful
 ```
 
+```bash pnpm
+pnpm add mirrorful -D; pnpm mirrorful editor
+```
+
 </CodeGroup>
 
 This will start a visual editor at `localhost:5050`.
