--- a/docs/home/community-support.mdx
+++ b/docs/home/community-support.mdx
@@ -1,25 +1,24 @@
 ---
-title: '❤️ Community & Support'
+title: 'Community & Support'
 ---
 
 <CardGroup cols={2}>
   <Card title="Slack" icon="slack" color="#9F7AEA">
-    for live
+    Join for live
     [discussion](https://join.slack.com/t/mirrorful/shared_invite/zt-1ps2xtxh0-2NaixFfFzSKZbr5gw_AHfA)
     with the community and the Mirrorful team. We have contributors from all
-    over the world. Join us!
-  </Card>
-  <Card title="GitHub Discussions" icon="github" color="#9F7AEA">
-    for help with building and deeper
-    [conversations](https://github.com/Mirrorful/mirrorful/discussions) about
-    features.
+    over the world.
   </Card>
   <Card title="GitHub Issues" icon="github-alt" color="#9F7AEA">
-    for any [bugs and errors](https://github.com/Mirrorful/mirrorful/issues) you
-    encounter using Mirrorful.
+    Report any [bugs and errors](https://github.com/Mirrorful/mirrorful/issues)
+    you encounter using Mirrorful.
   </Card>
   <Card title="Twitter" icon="twitter" color="#9F7AEA">
-    for staying [up to date](https://twitter.com/mirrorful) with the latest
-    product updates.
+    Stay [up to date](https://twitter.com/mirrorful) with the latest product
+    updates.
+  </Card>
+  <Card title="YouTube" icon="youtube" color="#9F7AEA">
+    Watch [content](https://www.youtube.com/channel/UCcwtacSuKB8itMDMIfkkuHQ)
+    about coding and design systems.
   </Card>
 </CardGroup>
