--- a/docs/home/eslint-plugin.mdx
+++ b/docs/home/eslint-plugin.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🪞 ESLint Plugin'
+title: 'ESLint Plugin'
 description: 'eslint-plugin-mirrorful is a plugin containing ESLint rules for Mirrorful projects. It helps maintain code quality and best practices when working with Mirrorful.'
 ---
 
