--- a/docs/home/examples.mdx
+++ b/docs/home/examples.mdx
@@ -1,7 +1,9 @@
 ---
-title: '📁 Examples'
+title: 'Examples'
 description: 'How to integrate Mirrorful with other frameworks and tools.'
 ---
+
+We strive to be component library agnostic. Whether you're using Material UI, Chakra UI, Tailwind, Ant Design, or even your in-house library, Mirrorful hooks right in.
 
 - [With Remix](https://github.com/Mirrorful/mirrorful/tree/main/examples/remix)
 - [With Create React App](https://github.com/Mirrorful/mirrorful/tree/main/examples/create-react-app)
