--- a/docs/home/export-formats/colors.mdx
+++ b/docs/home/export-formats/colors.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🎨 Colors'
+title: 'Colors'
 description: 'After configuring your theme in the editor, you can export colors to be used by your app.'
 ---
 
