--- a/docs/home/export-formats/font-sizes.mdx
+++ b/docs/home/export-formats/font-sizes.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🅰️ Font Sizes'
+title: 'Font Sizes'
 description: 'After configuring your theme in the editor, you can export font sizes to be used by your app.'
 ---
 
