--- a/docs/home/export-formats/introduction.mdx
+++ b/docs/home/export-formats/introduction.mdx
@@ -1,16 +1,14 @@
 ---
-title: '💡 Introduction'
+title: 'Introduction'
 description: 'After configuring your theme in the editor, you can export it to be used by your app.'
 ---
 
 We currently export to the following file types: `.js`, `.ts`, `.css`, `.scss`, `.json`. If you're using tailwind, we also export to common js to work nicely with your tailwind config.
 
-<Info>
-  If you are using Mirrorful's web editor, you will need to create the imported
-  files yourself. You can do this by simply creating a file of your desired
-  format (i.e. `.js`, `.css`, etc) and then copying the generated code into the
-  file.
-</Info>
+If you are currently using Mirrorful's web editor, you will need to create the imported
+files yourself. You can do this by simply creating a file of your desired
+format (i.e. `.js`, `.css`, etc) and then copying the generated code into the
+file.
 
 ## Exported Tokens
 
