--- a/docs/home/intropage.mdx
+++ b/docs/home/intropage.mdx
@@ -5,7 +5,9 @@ description: 'Create the building blocks of your app with our simple and open-so
 
 ![](/image/intropage.png)
 
-Mirrorful is an open-source platform to manage design templates directly in code, making it easy to create the building blocks of your app. Mirrorful will run a visual editor of your theme and then directly export your design tokens to any configuration file.
+Mirrorful is an open-source design system framework, making it easy to manage and create the building blocks of your app.
+
+Start creating or managing your design system with [Mirrorful Cloud](https://app.mirrorful.com/colors).
 
 <CardGroup cols={2}>
   <Card
@@ -19,7 +21,11 @@ Mirrorful is an open-source platform to manage design templates directly in code
     color="#9F7AEA"
   ></Card>
   <Card title="Lives in code" icon="code" color="#9F7AEA"></Card>
-  <Card title="Speeds up development" icon="bolt" color="#9F7AEA"></Card>
+  <Card
+    title="Speeds up development of existing projects"
+    icon="bolt"
+    color="#9F7AEA"
+  ></Card>
   <Card
     title="Prepares you for scale"
     icon="earth-americas"
