--- a/docs/home/open-source-vs-paid.mdx
+++ b/docs/home/open-source-vs-paid.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🏘 Open-source vs. paid'
+title: 'Open-source vs. paid'
 description: 'This repo is currently entirely MIT licensed.'
 ---
 
