--- a/docs/home/security.mdx
+++ b/docs/home/security.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🛡 Security'
+title: 'Security'
 ---
 
 Mirrorful takes security issues very seriously. If you have any concerns about Mirrorful or believe you have uncovered a vulnerability, please get in touch via the e-mail address support@mirrorful.io. In the message, try to provide a description of the issue and ideally a way of reproducing it. The team will get back to you immediately.
