--- a/docs/home/why.mdx
+++ b/docs/home/why.mdx
@@ -1,12 +1,14 @@
 ---
-title: '🎨 Why should I use Mirrorful?'
-description: "Design systems are the building blocks of your app, but many projects don't adopt them until it's too late"
+title: 'Why should I use Mirrorful?'
+description: "Design systems are the building blocks of your app, but many projects don't adopt them until it's too late."
 ---
 
 Mirrorful gets you set up for a basic design system in minutes while leaving flexibility down the line for customizations. It is lightweight and dead simple.
 
 We're on a mission to help your project be as beautiful as possible. The bar for high quality design is getting higher. We want to help everyone add simple design tokens to new (and existing!) projects.
 
-Simple design systems also speed up development — even early-stage projects! One report suggests its 47% faster to build a simple form using a design system. It's useful for engineers, designers, and especially your customers if there isn't a random color for each button in your app.
+Simple design systems also speed up development — even early-stage projects! One report suggests its 47% faster to build a simple form using a design system.
+
+Get started today for free with [Mirrorful Cloud](https://app.mirrorful.com/colors).
 
 ![](/image/tower.png)
