fix typo on contributing guide

--- a/docs/home/contributing.mdx
+++ b/docs/home/contributing.mdx
@@ -21,7 +21,7 @@ If you have a bug or an idea, browse the open issues before opening a new one. I
 
 Mirrorful has a `web` app and `server` project. Mirrorful's core logic lives in `packages/core`.
 
-After cloing the repo, we can install all dependencies and run the web app:
+After cloning the repo, we can install all dependencies and run the web app:
 
 ```bash
 # In project root
