docs: update documentation and README to reflect components update

--- a/docs/home/intropage.mdx
+++ b/docs/home/intropage.mdx
@@ -1,26 +1,26 @@
 ---
-title: 'Introduction'
-description: 'Create the building blocks of your app with our simple and open-source design system infrastructure.'
+title: 'Introduction to Mirrorful'
+description: 'Create the building blocks of your app.'
 ---
 
 ![](/image/intropage.png)
 
-Mirrorful is an open-source design system framework, making it easy to manage and create the building blocks of your app.
+Mirrorful provides a foundation of fully customizable, well-crafted, production-ready components that fits your tech stack and can be integrated into your workflow from day-0. Beyond the components themselves, we make it easy for a designer to design, edit, and evolve the system over time in a way that requires no engineering support with a no-code editor. This frees up your engineers to focus on higher-leverage work and enables your designers to directly influence the accuracy and craft of the product being built—all with higher velocity.
 
-Start creating or managing your design system with [Mirrorful Cloud](https://app.mirrorful.com/colors).
+Start today with [Mirrorful Cloud](https://app.mirrorful.com/components).
 
 <CardGroup cols={2}>
+  <Card title="No-code editor" icon="diagram-project" color="#9F7AEA"></Card>
   <Card
-    title="Start new projects with a source of truth"
-    icon="diagram-project"
-    color="#9F7AEA"
-  ></Card>
-  <Card
-    title="Visually modify your theme"
+    title="Component documentation"
     icon="square-dashed-circle-plus"
     color="#9F7AEA"
   ></Card>
-  <Card title="Lives in code" icon="code" color="#9F7AEA"></Card>
+  <Card
+    title="Production-ready and battle-tested"
+    icon="code"
+    color="#9F7AEA"
+  ></Card>
   <Card
     title="Speeds up development of existing projects"
     icon="bolt"
