--- a/docs/home/showcase.mdx
+++ b/docs/home/showcase.mdx
@@ -16,10 +16,42 @@ Discover how we help companies and projects win with design.
   <Card
     title="Covefy"
     icon="palette"
-    color="rgb(24,27,30)"
+    color="rgb(9,93,253)"
     href="https://www.covefy.com"
   >
     Discover, learn and connect.
+  </Card>
+  <Card
+    title="Outerbase"
+    icon="database"
+    color="white"
+    href="https://www.outerbase.com"
+  >
+    The interface for your database
+  </Card>
+  <Card
+    title="Localize"
+    icon="user"
+    color="white"
+    href="https://localizejs.com/"
+  >
+    Translate in minutes, not months
+  </Card>
+  <Card
+    title="Canopy"
+    icon="Bird"
+    color="rgb(9,93,253)"
+    href="https://heycanopy.com/"
+  >
+    Private investments, simplified
+  </Card>
+  <Card
+    title="Zenfetch"
+    icon="phone"
+    color="rgb(9,93,253)"
+    href="https://heycanopy.com/"
+  >
+    Real Time Co-Pilot for Sales Teams
   </Card>
 </CardGroup>
 
