--- a/changes.txt
+++ b/changes.txt
@@ -1,7 +1,7 @@
 
-                Before:
-                hi
-
-                After:
-                hello
-                
+                  Before:
+                  before
+  
+                  After:
+                  after
+                  
